name:
  duet
version:
  0
cabal-version:
  >=1.10
build-type:
  Simple

library
  hs-source-dirs:
    src
  build-depends:
    base,
    containers,
    mtl,
    exceptions,
    parsec,
    text,
    edit-distance,
    deepseq,
    aeson,
    syb
  if !impl(ghcjs)
    build-depends:
       monad-logger
  ghc-options:
    -Wall -O2
  default-language:
    Haskell2010
  exposed-modules:
    Duet.Infer
    Duet.Types
    Duet.Parser
    Duet.Printer
    Duet.Tokenizer
    Duet.Renamer
    Duet.Resolver
    Duet.Stepper
    Duet.Errors
    Duet.Supply
    Duet.Context
    Control.Monad.Supply
