name:
  duet
version:
  0.0.1
cabal-version:
  >=1.10
build-type:
  Simple

library
  hs-source-dirs:
    src
  build-depends:
    base,
    containers,
    mtl,
    exceptions,
    parsec,
    text,
    edit-distance,
    deepseq,
    aeson,
    syb,
       monad-logger
  ghc-options:
    -Wall -O2
  default-language:
    Haskell2010
  exposed-modules:
    Duet.Infer
    Duet.Types
    Duet.Parser
    Duet.Printer
    Duet.Tokenizer
    Duet.Renamer
    Duet.Resolver
    Duet.Stepper
    Duet.Errors
    Duet.Supply
    Duet.Context
    Duet.Setup
    Duet.Simple
    Control.Monad.Supply

test-suite duet-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall -O0
  default-language: Haskell2010
  build-depends:
      base, duet,
    containers,
    mtl,
    exceptions,
    parsec,
    text,
    edit-distance,
    deepseq,
    aeson,
    syb,
    hspec,
    monad-logger

executable duet
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends:
      base, duet,
    containers,
    mtl,
    exceptions,
    text,
    deepseq,
    aeson,
    syb,
    monad-logger,
    optparse-simple
